<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAppActivity">

    <Button
        android:id="@+id/add_course_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAddCourseClicked"
        android:text="Add Course"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/students_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <Spinner
        android:id="@+id/filter_select"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:contentDescription="Filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

<!--    <Spinner-->
<!--        android:id="@+id/filterClasses_select"-->
<!--        android:layout_width="123dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:contentDescription="FilterClasses"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.016" />-->

    <Button
        android:id="@+id/startStop_button"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016"
        android:onClick="StartStopClicked"/>


    <EditText
        android:id="@+id/csvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="csv data"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/add_course_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/use_csv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="100dp"
        android:onClick="useCSV"
        android:text="Use CSV"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/csvData" />
</androidx.constraintlayout.widget.ConstraintLayout>