...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/confirm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="157dp"
      android:layout_marginTop="136dp"
      android:onClick="onClickConfirm"
      android:text="Confirm"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
...
